フォームレイアウトの修正

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -6,7 +6,7 @@ ja:
         name: "名前"
         current_password: "現在のパスワード"
         email: "メールアドレス"
-        password: "パスワード"
+        password: "パスワード （6文字以上）"
         password_confirmation: "確認用パスワード"
         remember_me: "ログインを記憶"
         self_introduction: "自己紹介"
